// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlainButton /> should render correctly 1`] = `
<button
  class="PlainButton-e9bw3w-0 idFpfa"
/>
`;

exports[`<PlainButton /> should render text correctly 1`] = `
<button
  class="PlainButton-e9bw3w-0 idFpfa"
>
  text
</button>
`;
